--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.18.1",
     "react": "^18.2.0",
